tests/baselines/reference/MemberFunctionDeclaration4_es6.errors.txt
error TS2318: Cannot find global type 'IterableIterator'.
tests/cases/conformance/es6/memberFunctionDeclarations/MemberFunctionDeclaration4_es6.ts(2,5): error TS1003: Identifier expected.


!!! error TS2318: Cannot find global type 'IterableIterator'.
==== tests/cases/conformance/es6/memberFunctionDeclarations/MemberFunctionDeclaration4_es6.ts (1 errors) ====
    class C {
       *() { }
        ~
!!! error TS1003: Identifier expected.
    }